--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@sveltejs/adapter-auto": "^1.0.0-next.90",
     "compression": "^1.7.1",
     "polka": "next",
-    "sirv": "^1.0.0"
+    "sirv": "^1.0.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
